teeda-html-example/src/main/java/examples/teeda/web/error/WebAppRuntimeException.java
/**
 *
 */
package examples.teeda.web.error;

/**
 * @author shot
 */
public class WebAppRuntimeException extends RuntimeException {

	public WebAppRuntimeException(String message) {
		super(message);
	}
}
